--- a/src/app/home-router/csgo/csgo.component.css
+++ b/src/app/home-router/csgo/csgo.component.css
@@ -1,7 +1,7 @@
 .newsHeader{
     padding: 5px;
     color: white;
-    font-weight: 500;
+    font-weight: 300;
     margin-left: 9%;
     margin-right: 10%;
 }
@@ -9,7 +9,7 @@
 .recentGamesHeader{
     padding: 5px;
     color: white;
-    font-weight: 500;
+    font-weight: 300;
     margin-left: 3%;
 
 }
@@ -17,7 +17,7 @@
 .rankingsHeader{
     padding: 5px;
     color: white;
-    font-weight: 500;
+    font-weight: 300;
     margin-right: 3%;
 }
 
@@ -27,7 +27,7 @@
 }
 
 .textShrink {
-    font-size: 14px;
+    font-size: 11px;
   }
 
   .resultScore{
@@ -59,7 +59,7 @@
   }
 
   .headlines{
-    text-transform: uppercase;font-size:12px; background-color: #353573;
+    text-transform: uppercase;font-size:11px; background-color: #353573;
   }
 
   a{
@@ -69,3 +69,7 @@
   .team-align{
      font-size:11px;
   }
+.viewers{
+    width: 100% !important;
+    text-align: right;
+}
