team placeholder fixed

--- a/src/app/home-router/csgo/team-page/team-page.component.css
+++ b/src/app/home-router/csgo/team-page/team-page.component.css
@@ -49,6 +49,7 @@
     flex-wrap: nowrap; 
     z-index: 1;
     width: 100%;
+    margin:0;
 }
 .coverImage{
     background-image: url(https://static.hltv.org/./images/galleries/10061-medium/1485719395.0855.jpeg);
@@ -58,8 +59,7 @@
     background-size: cover;
     opacity: 1;
     position:absolute;
-    margin-left: 1.6%;
-    background-position: 0px -159px;
+
 }
 .coverImage1{
     background-color: #3f4042;
@@ -69,8 +69,6 @@
     background-size: cover;
     opacity: .8;
     position: absolute;
-    margin-left: 1.6%;
-    background-position: 0px -164px;
 }
 .app-team-page.ng-star-inserted{
     position: relative !important;
